--- a/index.html
+++ b/index.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>TrollUpdate - Mise à jour Windows</title>
-  <link rel="stylesheet" href="/style.css" />
+  <meta charset="UTF-8">
+  <title>Mise à jour système - troll</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div id="app-root">
-    <h1>Mise à jour Windows {{UPDATE_VERSION}}</h1>
-    <div id="progress-bar"><div id="progress"></div></div>
-    <p id="status">Initialisation...</p>
-    
-    <!-- Nouveau : Sélecteur de difficulté -->
-    <div id="difficulty-selector" style="text-align: center; margin-top: 20px;">
-      <p>Sélectionnez le niveau de difficulté du troll :</p>
-      <select id="troll-difficulty" style="padding: 8px; font-size: 16px; border-radius: 5px; background: #1a1a1a; color: lime; border: 1px solid lime;">
-        <option value="">-- Choisir --</option>
-        <option value="facile">Facile (mise à jour rapide, peu de popups)</option>
-        <option value="moyen">Moyen (rythme normal)</option>
-        <option value="difficile">Difficile (mise à jour lente, beaucoup de popups)</option>
-      </select>
-      <button id="start-troll-button" style="padding: 10px 20px; font-size: 16px; margin-left: 10px; cursor: pointer; background: lime; color: black; border: none; border-radius: 5px;" disabled>Démarrer la Mise à Jour</button>
-    </div>
-    <!-- Fin du sélecteur de difficulté -->
+<body onload="updateProgress()">
+  <h1>Mise à jour système</h1>
 
-    <input type="text" id="search-bar" placeholder="Rechercher..." autocomplete="off" />
+  <!-- Barre de progression -->
+  <div id="progress-bar">
+    <div id="progress"></div>
+  </div>
+  <div id="status">Préparation de la mise à jour...</div>
 
-    <div id="popup-container"></div>
-    <div id="morpion-container"></div>
-    <img id="image-troll" src="/meme.png" alt="Troll" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); z-index:9999; max-width: 80%; height: auto;" />
-    <audio id="error-audio" src="/winstart.wav" preload="auto"></audio>
+  <!-- Barre de recherche troll -->
+  <input type="text" id="search-bar" placeholder="Entrez un nombre entre 1 et 15 ou un mot-clé secret">
+
+  <!-- Morpion -->
+  <div id="morpion-container" style="display:none;">
+    <h3>Jouez pendant que ça installe...</h3>
+    <div id="board"></div>
   </div>
 
-  <script src="/script.js"></script>
+  <!-- Popups troll -->
+  <div id="popup-container"></div>
+
+  <!-- Image troll -->
+  <div id="image-troll" style="display:none;">
+    <p>Erreur critique détectée</p>
+    <img src="trollface.png" alt="Trollface">
+  </div>
+
+  <!-- Calculatrice -->
+  <div id="calculator" style="display:none;">
+    <h3>Calculatrice</h3>
+    <input type="text" id="calc-display" disabled />
+    <div id="calc-buttons"></div>
+  </div>
+
+  <!-- Rickroll -->
+  <video id="rickroll" style="display:none;" width="320" height="180" autoplay loop muted>
+    <source src="video_playback.mp4" type="video/mp4">
+  </video>
+
+  <!-- Son d’erreur -->
+  <audio id="error-sound" src="error.mp3"></audio>
+
+  <script src="script.js"></script>
 </body>
 </html>
