--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mise à jour système - troll</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body onload="updateProgress()">
+<body>
   <h1>Mise à jour système</h1>
 
   <!-- Barre de progression -->
