--- a/index.html
+++ b/index.html
@@ -32,17 +32,16 @@
     <img src="trollface.png" alt="Trollface">
   </div>
 
-  <!-- Calculatrice -->
-  <div id="calculator" style="display:none;">
-    <h3>Calculatrice</h3>
-    <input type="text" id="calc-display" disabled />
-    <div id="calc-buttons"></div>
-  </div>
+<div id="calculator-container" style="display:none;">
+  <h3>Calculatrice</h3>
+  <input type="text" id="calc-display" disabled />
+  <div id="calc-buttons"></div>
+</div>
 
-  <!-- Rickroll -->
-  <video id="rickroll" style="display:none;" width="320" height="180" autoplay loop muted>
-    <source src="video_playback.mp4" type="video/mp4">
-  </video>
+<video id="rickroll-video" style="display:none;" width="320" height="180" autoplay loop muted>
+  <source src="video_playback.mp4" type="video/mp4">
+</video>
+
 
   <!-- Son d’erreur -->
   <audio id="error-sound" src="error.mp3"></audio>
@@ -50,3 +49,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
