--- a/index.html
+++ b/index.html
@@ -6,45 +6,48 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Mise à jour système</h1>
+  <!-- Conteneur principal pour le mode plein écran -->
+  <div id="fullscreen-container">
+    <h1 id="main-title">Mise à jour système</h1>
 
-  <!-- Barre de progression -->
-  <div id="progress-bar">
-    <div id="progress"></div>
+    <!-- Barre de progression -->
+    <div id="progress-bar">
+      <div id="progress"></div>
+    </div>
+    <div id="status"></div> <!-- Le texte initial sera mis par JS -->
+
+    <!-- Calculatrice troll -->
+    <div id="calculator-container" style="display:none;">
+      <h3>Calculatrice</h3>
+      <input type="text" id="calc-display" disabled />
+      <div id="calc-buttons"></div>
+    </div>
+
+    <!-- Barre de recherche troll -->
+    <input type="text" id="search-bar" placeholder="Clic PAS">
+
+    <!-- Morpion -->
+    <div id="morpion-container" style="display:none;">
+      <h3>Jouez pendant que ça installe...</h3>
+      <div id="board"></div>
+    </div>
+
+    <!-- Popups troll -->
+    <div id="popup-container"></div>
+
+    <!-- Image troll -->
+    <div id="image-troll" style="display:none;">
+      <p>Erreur critique détectée</p>
+      <img src="trollface.png" alt="Trollface">
+    </div>
+
+    <video id="rickroll-video" style="display:none;" width="320" height="180" autoplay loop muted>
+      <source src="video_playback.mp4" type="video/mp4">
+    </video>
+
+    <!-- Son d’erreur -->
+    <audio id="error-sound" src="error.mp3"></audio>
   </div>
-  <div id="status">Préparation de la mise à jour...</div>
-
-  <!-- Calculatrice troll (maintenant au-dessus de la barre de recherche) -->
-  <div id="calculator-container" style="display:none;">
-    <h3>Calculatrice</h3>
-    <input type="text" id="calc-display" disabled />
-    <div id="calc-buttons"></div>
-  </div>
-
-  <!-- Barre de recherche troll -->
-  <input type="text" id="search-bar" placeholder="Clic PAS"> <!-- Placeholder changé -->
-
-  <!-- Morpion -->
-  <div id="morpion-container" style="display:none;">
-    <h3>Jouez pendant que ça installe...</h3>
-    <div id="board"></div>
-  </div>
-
-  <!-- Popups troll -->
-  <div id="popup-container"></div>
-
-  <!-- Image troll -->
-  <div id="image-troll" style="display:none;">
-    <p>Erreur critique détectée</p>
-    <img src="trollface.png" alt="Trollface">
-  </div>
-
-<video id="rickroll-video" style="display:none;" width="320" height="180" autoplay loop muted>
-  <source src="video_playback.mp4" type="video/mp4">
-</video>
-
-  <!-- Son d’erreur -->
-  <audio id="error-sound" src="error.mp3"></audio>
 
   <script src="script.js"></script>
 </body>
