--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- Conteneur principal pour le mode plein écran -->
   <div id="fullscreen-container">
-    <h1 id="main-title">Mise à jour système</h1>
+    <h1 id="main-title">Mise à jour système</h1> <!-- Assurez-vous que l'ID est bien là -->
 
     <!-- Barre de progression -->
     <div id="progress-bar">
