--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Mise à jour système - troll</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- AJOUTÉ: Pour le responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="data:image/x-icon;,"> <!-- AJOUTÉ: Pour éviter l'erreur favicon 404 -->
 </head>
 <body>
   <!-- Conteneur principal pour le mode plein écran -->
