--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
     <!-- NOUVEAU: Conteneur pour les messages d'alerte personnalisés -->
     <div id="custom-alert-container" class="fixed-element"></div>
 
+    <!-- NOUVEAU: Spinner de redémarrage type Windows -->
+    <div id="windows-restart-spinner" class="fixed-element">
+      <div class="spinning-circle"></div>
+    </div>
+
   </div>
 
   <script src="script.js"></script>
