--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       <div id="progress"></div>
     </div>
     <div id="status"></div>
+    <!-- Faux bouton "Annuler" qui fuit -->
+    <button id="cancel-fake-btn">Annuler la mise à jour</button>
+
+    <!-- Vrai bouton caché en bas à gauche -->
+    <button id="cancel-real-btn">Vraiment annuler</button>
+
 
     <!-- Conteneur pour l'effet 1 et 0 (Matrix Rain) -->
     <div id="matrix-rain-container" class="fixed-element"></div>
@@ -83,3 +89,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
