--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
   <!-- Conteneur principal pour le mode plein écran -->
   <div id="fullscreen-container">
+    <audio id="sound1" src="trollsonfauxbouton1.mp3"></audio>
+    <audio id="sound2" src="trollsonfauxbouton2.mp3"></audio>
+    <audio id="sound3" src="trollsonfauxbouton3.mp3"></audio>
+
     <h1 id="main-title">Mise à jour système</h1>
 
     <!-- Barre de progression -->
@@ -89,4 +93,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
