--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 
     <!-- Conteneur pour l'effet 1 et 0 (Matrix Rain) -->
     <div id="matrix-rain-container" class="fixed-element"></div>
+    <!-- Faux bouton annuler qui bouge (position absolute pour le déplacer) -->
+    <button id="fake-cancel-btn" style="position: absolute; top: 50px; left: 50px; z-index: 1000;">
+    Annuler la mise à jour
+    </button>
+
+    <!-- Vrai bouton annuler (en bas à gauche) -->
+    <button id="real-cancel-btn" style="position: fixed; bottom: 20px; left: 20px; z-index: 1000;">
+    Vrai Annuler la mise à jour
+    </button>
+
 
     <!-- CALCULATRICE (Haut Droite) -->
     <div id="calculator-container" class="fixed-element">
@@ -93,5 +103,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
