--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <audio id="sound1" src="trollsonfauxbouton1.mp3"></audio>
     <audio id="sound2" src="trollsonfauxbouton2.mp3"></audio>
     <audio id="sound3" src="trollsonfauxbouton3.mp3"></audio>
+    <audio id="xp-startup" src="Windows_XP.mp3"></audio>
+    <div id="fake-cursors-container" style="pointer-events:none;"></div>
 
     <h1 id="main-title">Mise à jour système</h1>
 
@@ -104,6 +106,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
