--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <audio id="sound3" src="trollsonfauxbouton3.mp3"></audio>
     <audio id="xp-startup" src="Windows_XP.mp3"></audio>
     <div id="fake-cursors-container" style="pointer-events:none;"></div>
+    <div id="fake-cursors-container" style="pointer-events:none;position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:9999;"></div>
 
     <h1 id="main-title">Mise à jour système</h1>
 
@@ -106,6 +107,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
