--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="data:image/x-icon;,">
+  <div id="explorer-fake" class="fixed-element" style="display:none;">
+  <div style="background:#005FA8;padding:10px;border-radius:5px;">
+    <h4>Explorateur - troll update</h4>
+    <div id="explorer-files"></div>
+  </div>
+  </div>
+  <canvas id="pong-canvas" width="600" height="350" style="display:none;position:fixed;top:20vh;left:50vw;transform:translateX(-50%);z-index:9000;background:#1a1a1a;border:2px solid white;"></canvas>
 </head>
 <body>
   <!-- Conteneur principal pour le mode plein écran -->
@@ -101,4 +108,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
